--- a/index.html
+++ b/index.html
@@ -132,7 +132,61 @@ input[type=date] {
   border:1px solid #ccc;
   width:100%;
 }
+/* Footer Base */
+.footer {
+  background: #001219;
+  color: #fff;
+  padding: 15px 20px;
+  position: relative;
+  overflow: hidden;
+  font-family: 'Segoe UI', Arial, sans-serif;
+}
 
+.footer-container {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transform: rotateX(-90deg);
+  animation: flipIn 0.8s forwards ease-out;
+}
+
+/* Flip-in Animation */
+@keyframes flipIn {
+  0% { transform: rotateX(-90deg); opacity: 0; }
+  100% { transform: rotateX(0deg); opacity: 1; }
+}
+
+/* Footer Right Links */
+.footer-right {
+  display: flex;
+  gap: 20px;
+}
+
+.footer-link {
+  color: #ffb703;
+  text-decoration: none;
+  font-weight: 600;
+  transition: transform 0.5s ease;
+}
+
+/* Zoom animation */
+@keyframes zoomPulse {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.3); }
+}
+
+/* Trigger zoom every 3 seconds */
+.footer-link {
+  animation: zoomPulse 3s infinite;
+}
+
+/* Footer Left */
+.footer-left {
+  font-weight: 600;
+  font-size: 1rem;
+}
 </style>
 </head>
 <body>
