--- a/sales.html
+++ b/sales.html
@@ -285,7 +285,24 @@ function checkDeviceDisabled(){
 checkDeviceDisabled();
   
 </script>
+<!-- Include Font Awesome CDN in your <head> -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-left">
+      &copy; 2025 SlideTeck
+    </div>
+    <div class="footer-right">
+      <a href="https://wa.me/2349131697494" target="_blank" class="footer-link">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+      <a href="mailto:info@slideteck.com" class="footer-link">
+        <i class="fas fa-envelope"></i>
+      </a>
+    </div>
+  </div>
+</footer>
   
 </body>
 </html>
