--- a/sales.html
+++ b/sales.html
@@ -288,21 +288,7 @@ checkDeviceDisabled();
 <!-- Include Font Awesome CDN in your <head> -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<footer class="footer">
-  <div class="footer-container">
-    <div class="footer-left">
-      &copy; 2025 SlideTeck
-    </div>
-    <div class="footer-right">
-      <a href="https://wa.me/2349131697494" target="_blank" class="footer-link">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-      <a href="mailto:info@slideteck.com" class="footer-link">
-        <i class="fas fa-envelope"></i>
-      </a>
-    </div>
-  </div>
-</footer>
+<iframe src="footer.html" style="width:100%; border:none;"></iframe>
   
 </body>
 </html>
