--- a/stock.html
+++ b/stock.html
@@ -503,6 +503,6 @@ checkDeviceDisabled();
   
 </script>
 
-        
+   <iframe src="footer.html" style="width:100%; border:none;"></iframe>     
 </body>
 </html>
