--- a/index.html
+++ b/index.html
@@ -132,86 +132,10 @@ input[type=date] {
   border:1px solid #ccc;
   width:100%;
 }
-/* Footer Base */
-.footer {
-  background: #001219;
-  color: #fff;
-  padding: 15px 20px;
-  position: relative;
-  overflow: hidden;
-  font-family: 'Segoe UI', Arial, sans-serif;
-}
 
-.footer-container {
-  max-width: 1000px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transform: rotateX(-90deg);
-  animation: flipIn 0.8s forwards ease-out;
-}
 
-/* Flip-in Animation */
-@keyframes flipIn {
-  0% { transform: rotateX(-90deg); opacity: 0; }
-  100% { transform: rotateX(0deg); opacity: 1; }
-}
 
-/* Footer Base */
-.footer {
-  background: #001219;
-  color: #fff;
-  padding: 15px 20px;
-  font-family: 'Segoe UI', Arial, sans-serif;
-}
 
-.footer-container {
-  max-width: 1000px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transform: rotateX(-90deg);
-  animation: flipIn 0.8s forwards ease-out;
-}
-
-/* Flip-in Animation */
-@keyframes flipIn {
-  0% { transform: rotateX(-90deg); opacity: 0; }
-  100% { transform: rotateX(0deg); opacity: 1; }
-}
-
-/* Footer Right Icons */
-.footer-right {
-  display: flex;
-  gap: 20px;
-}
-
-.footer-link {
-  color: #ffb703;
-  font-size: 1.3rem;
-  transition: transform 0.5s ease;
-  display: flex;
-  align-items: center;
-}
-
-/* Zoom animation */
-@keyframes zoomPulse {
-  0%, 100% { transform: scale(1); }
-  50% { transform: scale(1.3); }
-}
-
-/* Trigger zoom every 3 seconds */
-.footer-link {
-  animation: zoomPulse 3s infinite;
-}
-
-/* Footer Left */
-.footer-left {
-  font-weight: 600;
-  font-size: 1rem;
-}
 </style>
 </head>
 <body>
@@ -480,21 +404,7 @@ function toggleDevice(deviceId,currentStatus){
 <!-- Include Font Awesome CDN in your <head> -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<footer class="footer">
-  <div class="footer-container">
-    <div class="footer-left">
-      &copy; 2025 SlideTeck
-    </div>
-    <div class="footer-right">
-      <a href="https://wa.me/2349131697494" target="_blank" class="footer-link">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-      <a href="mailto:info@slideteck.com" class="footer-link">
-        <i class="fas fa-envelope"></i>
-      </a>
-    </div>
-  </div>
-</footer>
+<iframe src="footer.html" style="width:100%; border:none;"></iframe>
 
     
 </body>
