--- a/stock.html
+++ b/stock.html
@@ -263,7 +263,7 @@ th {
 <!-- Spinner Overlay -->
 <div id="spinnerOverlay">
   <div class="spinner-loop">
-    <img src="logo.png" alt="Logo">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjxt5Kpv0QeqlUKHX3DftEAfQga4TenQqJPtv81WZQvJkISGgyVClnFtO9AudC9fYtb0KST5EPB2M4wUEfBqbGdt9p6rddDu496oC_qWh71dw5ain_Iunbv8tOq-dLXApV2c4lFbYBd5C34eD39nugn-rlOV590DFgY6Mp3SJ3K0qM43pIARTmeG_03I6c/s320/1000053949.png" alt="Logo">
   </div>
 </div>
 
