--- a/index.html
+++ b/index.html
@@ -401,6 +401,21 @@ function toggleDevice(deviceId,currentStatus){
 }
   
 </script>
+
+    <script>
+const activeDevicesContainer = document.getElementById("deviceList");
+
+onSnapshot(collection(db, "activeDevices"), (snapshot) => {
+  activeDevicesContainer.innerHTML = "";
+  snapshot.forEach((doc) => {
+    const data = doc.data();
+    const div = document.createElement("div");
+    div.textContent = `${data.user} - ${data.page} - ${data.lastActive.toDate().toLocaleString()} - ${data.enabled ? "Active" : "Disabled"}`;
+    activeDevicesContainer.appendChild(div);
+  });
+});
+      
+    </script>
 <!-- Include Font Awesome CDN in your <head> -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 
