--- a/index.html
+++ b/index.html
@@ -155,7 +155,17 @@ input[type=date] {
       <p id="loginMsg"></p>
     </div>
   </div>
-
+<div class="grid-2" style="margin-bottom:10px;">
+  <div>
+    <label>From:</label>
+    <input type="date" id="stockFromDate">
+  </div>
+  <div>
+    <label>To:</label>
+    <input type="date" id="stockToDate">
+  </div>
+</div>
+  
   <!-- Dashboard Panels -->
   <div id="dashboard" style="display:none;">
 <!-- Stock Panel -->
