--- a/sales.html
+++ b/sales.html
@@ -108,7 +108,18 @@ th{background:#0077b6;color:#fff;}
   </div>
   <button class="btn-add" id="checkoutBtn">Checkout & Print Receipt</button>
 </div>
+<div class="grid-2" style="margin-bottom:10px;">
+  <div>
+    <label>From:</label>
+    <input type="date" id="salesFromDate">
+  </div>
+  <div>
+    <label>To:</label>
+    <input type="date" id="salesToDate">
+  </div>
+</div>
 
+  
 </div>
 <!-- Reusable Login Modal -->
 <div id="loginModal">
