--- a/stock.html
+++ b/stock.html
@@ -274,42 +274,12 @@ th {
 </button>
   
 <script>
-// --- IndexedDB setup ---
-let db;
-const request = indexedDB.open("StoreDB", 1);
-request.onupgradeneeded = e => {
-  db = e.target.result;
-  if (!db.objectStoreNames.contains("stock")) db.createObjectStore("stock", { keyPath: "barcode" });
-  if (!db.objectStoreNames.contains("sales")) db.createObjectStore("sales", { autoIncrement: true });
-};
-request.onsuccess = e => { db = e.target.result; renderStock(); };
-request.onerror = () => alert("DB error");
-
-// --- Generate 8-character barcode ---
-function generateBarcode() {
-  const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
-  let b = '';
-  for (let i = 0; i < 8; i++) b += chars.charAt(Math.floor(Math.random() * chars.length));
-  return b;
-}
-
 // --- Elements ---
 const addStockBtn = document.getElementById("addStockBtn");
 const itemName = document.getElementById("itemName");
 const itemCategory = document.getElementById("itemCategory");
 const itemQty = document.getElementById("itemQty");
 const itemPrice = document.getElementById("itemPrice");
-
-// --- Spinner & Button Text ---
-const btnText = document.createElement("span");
-btnText.textContent = "➕ Add Item";
-addStockBtn.innerHTML = '';
-addStockBtn.appendChild(btnText);
-
-const btnSpinner = document.createElement("span");
-btnSpinner.className = "spinner hidden";
-btnSpinner.style.marginLeft = "8px";
-addStockBtn.appendChild(btnSpinner);
 
 // --- Add Stock ---
 addStockBtn.addEventListener("click", () => {
@@ -318,96 +288,47 @@ addStockBtn.addEventListener("click", () => {
   const qty = parseInt(itemQty.value);
   const price = parseFloat(itemPrice.value);
 
-  if (!name || !category || !qty || !price) { 
-    alert("❌ Please fill all fields"); 
-    return; 
+  if (!name || !category || !qty || !price) {
+    alert("❌ Please fill all fields");
+    return;
   }
-
-  // Disable button and show spinner
-  addStockBtn.disabled = true;
-  const originalText = addStockBtn.textContent;
-  addStockBtn.innerHTML = `
-    <span class="spinner" style="
-      border: 3px solid transparent; 
-      border-top: 3px solid red; 
-      border-right: 3px solid green; 
-      border-bottom: 3px solid blue; 
-      border-left: 3px solid yellow; 
-      width: 18px; height: 18px; border-radius: 50%; 
-      display: inline-block; animation: spin 1s linear infinite;
-      margin-right: 8px;"></span> Adding...`;
-
-  // Generate barcode
-  const barcode = generateBarcode();
-  const dateAdded = new Date().toISOString();
-  const tx = db.transaction("stock", "readwrite").objectStore("stock");
-
-  tx.add({ barcode, name, category, qty, price, dateAdded });
-
-  tx.oncomplete = () => {
-    // Reset button
-    addStockBtn.disabled = false;
-    addStockBtn.textContent = originalText;
-
-    // Render stock table
-    renderStock();
-
-    // Show confirmation popup
-    if (confirm(`✅ Item "${name}" added successfully!\nClick OK to add more.`)) {
-      // Clear input fields
-      itemName.value = "";
-      itemCategory.value = "";
-      itemQty.value = "";
-      itemPrice.value = "";
-      itemName.focus();
-    }
-  };
-
-  tx.onerror = () => {
-    alert("❌ Item already exists or DB error.");
-    addStockBtn.disabled = false;
-    addStockBtn.textContent = originalText;
-  };
-});
-
-// Spinner animation
-const style = document.createElement("style");
-style.innerHTML = `
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}`;
-document.head.appendChild(style);
 
   // Disable button & show spinner
   addStockBtn.disabled = true;
-  btnText.textContent = "Adding...";
-  btnSpinner.classList.remove("hidden");
+  addStockBtn.innerHTML = `
+    <span class="spinner" style="
+      border: 3px solid transparent;
+      border-top: 3px solid red;
+      border-right: 3px solid green;
+      border-bottom: 3px solid blue;
+      border-left: 3px solid yellow;
+      width: 18px; height: 18px; border-radius: 50%;
+      display: inline-block; animation: spin 1s linear infinite;
+      margin-right: 8px;"></span> Adding...`;
 
-  // Ensure unique barcode
-  let barcode;
-  function tryAdd() {
-    barcode = generateBarcode();
+  // Recursive function to ensure unique barcode
+  function tryAddStock() {
+    const barcode = generateBarcode();
+    const dateAdded = new Date().toISOString();
     const tx = db.transaction("stock", "readwrite").objectStore("stock");
-    const req = tx.add({ barcode, name, category, qty, price });
+    const req = tx.add({ barcode, name, category, qty, price, dateAdded });
 
     req.onsuccess = () => {
       renderStock();
-      // Show confirmation modal
       showConfirmationModal(name, barcode);
     };
 
     req.onerror = () => {
-      // If barcode exists, retry with new one
-      tryAdd();
+      // Retry with new barcode if collision
+      tryAddStock();
     };
   }
-  tryAdd();
+
+  tryAddStock();
 });
 
 // --- Confirmation Modal ---
 function showConfirmationModal(name, barcode) {
-  // Create modal overlay
   const modal = document.createElement("div");
   modal.style.position = "fixed";
   modal.style.top = 0;
@@ -427,9 +348,19 @@ function showConfirmationModal(name, barcode) {
   content.style.textAlign = "center";
   content.style.minWidth = "300px";
 
-  content.innerHTML = `<h3>✅ Stock Added!</h3>
-                       <p>Item: <b>${name}</b><br>Barcode: <b>${barcode}</b></p>
-                       <button id="modalOkBtn" style="padding:10px 20px;border:none;background:#0a9396;color:#fff;border-radius:8px;cursor:pointer;margin-top:15px;">OK</button>`;
+  content.innerHTML = `
+    <h3>✅ Stock Added!</h3>
+    <p>Item: <b>${name}</b><br>Barcode: <b>${barcode}</b></p>
+    <button id="modalOkBtn" style="
+      padding:10px 20px;
+      border:none;
+      background:#0a9396;
+      color:#fff;
+      border-radius:8px;
+      cursor:pointer;
+      margin-top:15px;
+    ">OK</button>
+  `;
 
   modal.appendChild(content);
   document.body.appendChild(modal);
@@ -444,37 +375,22 @@ function showConfirmationModal(name, barcode) {
     itemName.focus();
     // Reset button
     addStockBtn.disabled = false;
-    btnText.textContent = "➕ Add Item";
-    btnSpinner.classList.add("hidden");
+    addStockBtn.textContent = "➕ Add Item";
   });
 }
 
-// --- Render Stock ---
-function renderStock() {
-  const tbody = document.getElementById("stockTable");
-  const alerts = document.getElementById("lowStockAlerts");
-  tbody.innerHTML = "";
-  alerts.innerHTML = "";
+// --- Spinner Animation ---
+const style = document.createElement("style");
+style.innerHTML = `
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}`;
+document.head.appendChild(style);
 
-  const tx = db.transaction("stock", "readonly").objectStore("stock");
-  tx.openCursor().onsuccess = e => {
-    const cursor = e.target.result;
-    if (cursor) {
-      const i = cursor.value;
-      const tr = document.createElement("tr");
-      tr.innerHTML = `<td>${i.name}</td><td>${i.category}</td><td>${i.qty}</td><td>₦${i.price.toFixed(2)}</td>`;
-      tbody.appendChild(tr);
-
-      if (i.qty <= 5) {
-        const div = document.createElement("div");
-        div.className = "alert-low";
-        div.textContent = `⚠ Low stock: ${i.name} (Qty: ${i.qty})`;
-        alerts.appendChild(div);
-      }
-      cursor.continue();
-    }
-  };
-}
+  
+    
+    
 </script>
 
 <script>
