--- a/stock.html
+++ b/stock.html
@@ -274,6 +274,24 @@ th {
 </button>
   
 <script>
+// --- IndexedDB setup ---
+let db;
+const request = indexedDB.open("StoreDB", 1);
+request.onupgradeneeded = e => {
+  db = e.target.result;
+  if (!db.objectStoreNames.contains("stock")) db.createObjectStore("stock", { keyPath: "barcode" });
+};
+request.onsuccess = e => { db = e.target.result; renderStock(); };
+request.onerror = () => alert("DB error");
+
+// --- Generate 8-character barcode ---
+function generateBarcode() {
+  const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
+  let b = '';
+  for (let i = 0; i < 8; i++) b += chars.charAt(Math.floor(Math.random() * chars.length));
+  return b;
+}
+
 // --- Elements ---
 const addStockBtn = document.getElementById("addStockBtn");
 const itemName = document.getElementById("itemName");
@@ -288,47 +306,42 @@ addStockBtn.addEventListener("click", () => {
   const qty = parseInt(itemQty.value);
   const price = parseFloat(itemPrice.value);
 
-  if (!name || !category || !qty || !price) {
-    alert("❌ Please fill all fields");
-    return;
+  if (!name || !category || !qty || !price) { 
+    alert("❌ Please fill all fields"); 
+    return; 
   }
 
   // Disable button & show spinner
   addStockBtn.disabled = true;
-  addStockBtn.innerHTML = `
-    <span class="spinner" style="
-      border: 3px solid transparent;
-      border-top: 3px solid red;
-      border-right: 3px solid green;
-      border-bottom: 3px solid blue;
-      border-left: 3px solid yellow;
-      width: 18px; height: 18px; border-radius: 50%;
-      display: inline-block; animation: spin 1s linear infinite;
-      margin-right: 8px;"></span> Adding...`;
+  addStockBtn.textContent = "Adding... ⏳";
 
-  // Recursive function to ensure unique barcode
-  function tryAddStock() {
-    const barcode = generateBarcode();
-    const dateAdded = new Date().toISOString();
-    const tx = db.transaction("stock", "readwrite").objectStore("stock");
-    const req = tx.add({ barcode, name, category, qty, price, dateAdded });
+  // Generate barcode and add stock
+  const barcode = generateBarcode();
+  const dateAdded = new Date().toISOString();
+  const tx = db.transaction("stock", "readwrite").objectStore("stock");
+  const req = tx.add({ barcode, name, category, qty, price, dateAdded });
 
-    req.onsuccess = () => {
-      renderStock();
-      showConfirmationModal(name, barcode);
-    };
+  req.onsuccess = () => {
+    // Render stock table
+    renderStock();
 
-    req.onerror = () => {
-      // Retry with new barcode if collision
-      tryAddStock();
-    };
-  }
+    // Show confirmation modal
+    showConfirmationModal(name);
 
-  tryAddStock();
+    // Reset button
+    addStockBtn.disabled = false;
+    addStockBtn.textContent = "➕ Add Item";
+  };
+
+  req.onerror = () => {
+    alert("❌ Item already exists or DB error.");
+    addStockBtn.disabled = false;
+    addStockBtn.textContent = "➕ Add Item";
+  };
 });
 
 // --- Confirmation Modal ---
-function showConfirmationModal(name, barcode) {
+function showConfirmationModal(name) {
   const modal = document.createElement("div");
   modal.style.position = "fixed";
   modal.style.top = 0;
@@ -349,8 +362,8 @@ function showConfirmationModal(name, barcode) {
   content.style.minWidth = "300px";
 
   content.innerHTML = `
-    <h3>✅ Stock Added!</h3>
-    <p>Item: <b>${name}</b><br>Barcode: <b>${barcode}</b></p>
+    <h3>✅ Item Added!</h3>
+    <p>${name} added successfully.</p>
     <button id="modalOkBtn" style="
       padding:10px 20px;
       border:none;
@@ -358,41 +371,48 @@ function showConfirmationModal(name, barcode) {
       color:#fff;
       border-radius:8px;
       cursor:pointer;
-      margin-top:15px;
-    ">OK</button>
-  `;
+      margin-top:15px;">OK</button>`;
 
   modal.appendChild(content);
   document.body.appendChild(modal);
 
   document.getElementById("modalOkBtn").addEventListener("click", () => {
     document.body.removeChild(modal);
-    // Reset form
     itemName.value = "";
     itemCategory.value = "";
     itemQty.value = "";
     itemPrice.value = "";
     itemName.focus();
-    // Reset button
-    addStockBtn.disabled = false;
-    addStockBtn.textContent = "➕ Add Item";
   });
 }
 
-// --- Spinner Animation ---
-const style = document.createElement("style");
-style.innerHTML = `
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}`;
-document.head.appendChild(style);
+// --- Render Stock ---
+function renderStock() {
+  const tbody = document.getElementById("stockTable");
+  const alerts = document.getElementById("lowStockAlerts");
+  tbody.innerHTML = "";
+  alerts.innerHTML = "";
 
-  
-    
-    
+  const tx = db.transaction("stock", "readonly").objectStore("stock");
+  tx.openCursor().onsuccess = e => {
+    const cursor = e.target.result;
+    if (cursor) {
+      const i = cursor.value;
+      const tr = document.createElement("tr");
+      tr.innerHTML = `<td>${i.name}</td><td>${i.category}</td><td>${i.qty}</td><td>₦${i.price.toFixed(2)}</td>`;
+      tbody.appendChild(tr);
+
+      if (i.qty <= 5) {
+        const div = document.createElement("div");
+        div.className = "alert-low";
+        div.textContent = `⚠ Low stock: ${i.name} (Qty: ${i.qty})`;
+        alerts.appendChild(div);
+      }
+      cursor.continue();
+    }
+  };
+}
 </script>
-
 <script>
 // --- Staff password ---
 const staffPassword="staff123";
