--- a/sales.html
+++ b/sales.html
@@ -108,6 +108,8 @@ th{background:#0077b6;color:#fff;}
   </div>
   <button class="btn-add" id="checkoutBtn">Checkout & Print Receipt</button>
 </div>
+  
+  <div class="panel">
 <div class="grid-2" style="margin-bottom:10px;">
   <div>
     <label>From:</label>
@@ -117,9 +119,8 @@ th{background:#0077b6;color:#fff;}
     <label>To:</label>
     <input type="date" id="salesToDate">
   </div>
+</div>  
 </div>
-
-  
 </div>
 <!-- Reusable Login Modal -->
 <div id="loginModal">
