--- a/stock.html
+++ b/stock.html
@@ -205,7 +205,34 @@ th {
 @keyframes zoom{0%,100%{transform:scale(1);}50%{transform:scale(1.3);}}
 
 
-  
+.table-scroll {
+  max-height: 400px;        /* Limit the table height */
+  overflow-y: auto;         /* Enable vertical scrolling */
+  overflow-x: auto;         /* Horizontal scroll if needed */
+}
+
+/* Optional: keep table headers sticky */
+.table-scroll thead th {
+  position: sticky;
+  top: 0;
+  background: #0077b6;
+  color: #fff;
+  z-index: 2;
+}
+
+/* Delete button style */
+.btn-delete {
+  background: #e63946;
+  color: #fff;
+  padding: 6px 10px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+}
+.btn-delete:hover {
+  background: #d62828;
+}  
 </style>
 </head>
 <body>
@@ -230,11 +257,36 @@ th {
 </div>
   
 </div>
+
 <div class="panel">
   <h2>Stock List</h2>
   <div id="lowStockAlerts"></div>
-  
+
   <!-- Scrollable table container -->
+  <div class="table-scroll">
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Category</th>
+          <th>Qty</th>
+          <th>Price (₦)</th>
+          <th>Total (₦)</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="stockTable"></tbody>
+    </table>
+  </div>
+</div>
+
+  
+
+<!--
+<div class="panel">
+  <h2>Stock List</h2>
+  <div id="lowStockAlerts"></div>
+  <!-- Scrollable table container --
   <div class="table-scroll">
     <table>
       <thead>
@@ -249,7 +301,8 @@ th {
     </table>
   </div>
 </div>
-
+-->
+  
 <!-- Reusable Login Modal -->
 <div id="loginModal">
   <div class="modal-content">
@@ -376,12 +429,15 @@ function renderStock() {
     const cursor = e.target.result;
     if (cursor) {
       const i = cursor.value;
+      const total = i.qty * i.price;
+
       const tr = document.createElement("tr");
       tr.innerHTML = `
         <td>${i.name}</td>
         <td>${i.category}</td>
         <td>${i.qty}</td>
         <td>₦${i.price.toFixed(2)}</td>
+        <td>₦${total.toFixed(2)}</td>
         <td><button class="btn-delete" data-barcode="${i.barcode}">Delete</button></td>
       `;
       tbody.appendChild(tr);
@@ -392,19 +448,17 @@ function renderStock() {
         div.textContent = `⚠ Low stock: ${i.name} (Qty: ${i.qty})`;
         alerts.appendChild(div);
       }
-      cursor.continue();
-    } else {
-      // After all rows rendered, attach delete listeners
-      document.querySelectorAll(".btn-delete").forEach(btn => {
-        btn.addEventListener("click", () => {
-          const barcode = btn.getAttribute("data-barcode");
-          showModal("⚠ Are you sure you want to delete this item?", () => {
-            const txDel = db.transaction("stock", "readwrite").objectStore("stock");
-            txDel.delete(barcode);
-            txDel.oncomplete = renderStock;
-          });
-        });
+
+      // Attach delete listener immediately
+      tr.querySelector(".btn-delete").addEventListener("click", () => {
+        if (confirm(`❌ Delete "${i.name}" from stock?`)) {
+          const txDel = db.transaction("stock", "readwrite").objectStore("stock");
+          txDel.delete(i.barcode);
+          txDel.oncomplete = renderStock;
+        }
       });
+
+      cursor.continue();
     }
   };
 }
