--- a/index.html
+++ b/index.html
@@ -166,6 +166,73 @@ input[type=date] {
   </div>
 </div>
   
+ <!-- Stock Panel -->
+<div class="panel">
+  <div class="flex-between">
+    <h2>Stock Overview</h2>
+    <button class="btn-export" id="exportStockPDF">Export PDF</button>
+  </div>
+
+  <!-- Stock Totals -->
+  <div id="stockTotals" style="margin-bottom:10px;font-weight:600;"></div>
+
+  <div id="lowStockAlerts"></div>
+  <div class="table-container">
+    <table>
+      <thead>
+        <tr>
+          <th>Barcode</th>
+          <th>Name</th>
+          <th>Category</th>
+          <th>Qty</th>
+          <th>Price (₦)</th>
+          <th>Total (₦)</th>
+        </tr>
+      </thead>
+      <tbody id="stockTable"></tbody>
+    </table>
+  </div>
+</div>
+
+<!-- Sales Panel -->
+<div class="panel">
+  <div class="flex-between">
+    <h2>Sales Report</h2>
+    <button class="btn-export" id="exportSalesPDF">Export PDF</button>
+  </div>
+
+  <!-- Sales Totals -->
+  <div id="salesTotals" style="margin-bottom:10px;font-weight:600;"></div>
+
+  <div class="grid-2"> 
+    <div>
+      <label>From:</label>
+      <input type="date" id="fromDate">
+    </div>
+    <div>
+      <label>To:</label>
+      <input type="date" id="toDate">
+    </div>
+  </div>
+
+  <div class="table-container" style="margin-top:10px;">
+    <table>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Barcode</th>
+          <th>Item Name</th>
+          <th>Qty</th>
+          <th>Price (₦)</th>
+          <th>Total (₦)</th>
+        </tr>
+      </thead>
+      <tbody id="salesTable"></tbody>
+    </table>
+  </div>
+</div>
+  
+  
   <!-- Dashboard Panels --
   <div id="dashboard" style="display:none;">
 <!-- Stock Panel --
