--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@ input[type=date] {
   </div>
 
   <!-- Sales Totals -->
+  <div id="dashboard" style="display:none;">
   <div id="salesTotals" style="margin-bottom:10px;font-weight:600;"></div>
 
   <div class="grid-2"> 
@@ -231,7 +232,7 @@ input[type=date] {
     </table>
   </div>
 </div>
-  
+</div>  
   
   <!-- Dashboard Panels --
   <div id="dashboard" style="display:none;">
