--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ input[type=date] {
 </head>
 <body>
 
-<header>🛠 Admin Dashboard</header>
+<header>🛠 DGM Admin Dashboard</header>
 
 <div class="container">
 
