--- a/footer.html
+++ b/footer.html
@@ -67,7 +67,7 @@
       <a href="https://wa.me/2349131697494" target="_blank" class="footer-link">
         <i class="fab fa-whatsapp"></i>
       </a>
-      <a href="mailto:info@slideteck.com" class="footer-link">
+      <a href="mailto:slideteckacademy@gmail.com" class="footer-link">
         <i class="fas fa-envelope"></i>
       </a>
     </div>
