--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ function toggleDevice(deviceId,currentStatus){
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <iframe src="footer.html" style="width:100%; border:none;"></iframe>
-
+<script src="script.js"></script>
     
 </body>
 </html>
