--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ input[type=date] {
 
 <div class="container">
 
-  <!-- Login Modal -->
+  <!-- Login Modal --
   <div id="loginModal">
     <div class="modal-content">
       <h3>Admin Access</h3>
