--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ input[type=date] {
 <header>🛠 DGM Admin Dashboard</header>
 
 <div class="container">
-
+<!-- NOTE: DO NOT DELETE THIS LOGIN MODAL -->
   <!-- Login Modal --
   <div id="loginModal">
     <div class="modal-content">
@@ -225,39 +225,8 @@ input[type=date] {
 </div>
 </div>  
   
-  <!-- Dashboard Panels --
-  <div id="dashboard" style="display:none;">
-<!-- Stock Panel --
-<div class="panel">
-  <div class="flex-between">
-    <h2>Stock Overview</h2>
-    <button class="btn-export" id="exportStockPDF">Export PDF</button>
-  </div>
-  <div id="lowStockAlerts"></div>
-  <div class="table-container">
-    <table>
-      <thead> ... </thead>
-      <tbody id="stockTable"></tbody>
-    </table>
-  </div>
-</div>
+  
 
-<!-- Sales Panel --
-<div class="panel">
-  <div class="flex-between">
-    <h2>Sales Report</h2>
-    <button class="btn-export" id="exportSalesPDF">Export PDF</button>
-  </div>
-  <div class="grid-2"> ... </div>
-  <div class="table-container">
-    <table>
-      <thead> ... </thead>
-      <tbody id="salesTable"></tbody>
-    </table>
-  </div>
-</div>
-   
-  -->
   
   <!-- Admin Panel: Devices -->
 <div class="panel">
@@ -274,7 +243,40 @@ input[type=date] {
     <tbody id="deviceTable"></tbody>
   </table>
 </div>
+  <!--These buttons were created because i disabled the login modal above-->
+<div class="page-buttons">
+  <a href="sales.html" class="btn">Go to Sales</a>
+  <a href="stock.html" class="btn">Go to Stock</a>
+</div>
 
+<style>
+  .page-buttons {
+    display: flex;
+    flex-direction: column; /* stack vertically */
+    gap: 12px; /* spacing between buttons */
+    max-width: 200px; /* optional: limit width */
+    margin: 20px auto; /* center horizontally */
+  }
+
+  .page-buttons .btn {
+    display: block;
+    text-align: center;
+    padding: 12px 16px;
+    background: #007BFF;
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 6px;
+    transition: background 0.3s;
+  }
+
+  .page-buttons .btn:hover {
+    background: #0056b3;
+  }
+</style>
+
+  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
 const password="admin123";
